--- a/src/main.html
+++ b/src/main.html
@@ -3,9 +3,15 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>IITH</title>
+	<title>IIT Hyderabad – Access Logs</title>
+	<link rel="stylesheet" href="styles.css">
 </head>
 <body>
-	<h1>Hello</h1>
+	<nav>
+		<span></span>
+		<input type="text" name="okay" id="search-residents" placeholder="Search by name or roll number...">
+
+	</nav>
+
 </body>
 </html>
