--- a/src/entry.html
+++ b/src/entry.html
@@ -1,93 +1,107 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta charset="UTF-8" />
   <title>Gate Access System</title>
-  <link rel="stylesheet" href="styles.css">
+  <link rel="stylesheet" href="styles.css" />
+  <script src="https://unpkg.com/lucide@latest/dist/umd/lucide.js"></script>
+  <script type="module" src="../dist/scripts/main_entry.js"></script>
 </head>
 <body>
-  <!-- Header Section -->
   <header class="header">
     <div class="header__logo c">
-			<img src="/assets/iith-logo.png" class="c" alt="IIT Hyderabad">
-		</div>
-    <div class="header-search">
-      <input type="text" id="search-input" placeholder="Enter name or roll number..." autocomplete="off">
-      <!-- Custom dropdown for search suggestions -->
+      <img src="/assets/iith-logo.png" alt="IIT Hyderabad" />
+    </div>
+    <div class="header-search-container">
+      <div class="search-input-wrapper mb-sm">
+        <span data-lucide="search"></span>
+        <input
+          type="text"
+          id="search-input"
+          placeholder="Enter name or roll number..."
+          autocomplete="off"
+        />
+      </div>
       <ul id="search-results" class="dropdown hidden"></ul>
     </div>
   </header>
 
   <main class="main-content">
+    <!-- Resident Profile -->
     <section class="resident-profile">
-      <div id="profile-info" class="card title-b profile-info flex flex-evenly">
-        <!-- Dynamic profile details will be populated here -->
-        <div>
-					<div id="profile-details" class="profile-info__details">
-          <h2 id="resident-name" class="profile-info__name title-a">Jatin Jain</h2>
-          <div class="profile-info-secondary ds">
-						<span id="resident-roll" class=profile-info__dspanpartment">CS23BTECH11005</span>
-						<span id="resident-department" class="profile-info__department">Computer Science & Engineering</span>
-						<span id="resident-joined" class="profile-info__joined">Joined 2023</span>
-					</div>
+      <div class="card profile-info flex flex-start" id="profile-info">
+        <img
+          id="profile-photo"
+          class="profile-info__photo"
+          src="/assets/photo-placeholder.jpg"
+          alt="Profile Photo"
+        />
+        <div class="w100">
+          <div id="profile-details" class="profile-info__details">
+            <h2 id="resident-name" class="profile-info__name">Resident Name</h2>
+            <div class="profile-info-secondary ds">
+              <span id="resident-roll" class="profile-info__dspanpartment"
+                >CS23BTECH11005</span
+              >
+              <span id="resident-department" class="profile-info__department"
+                >Computer Science & Engineering</span
+              >
+            </div>
+          </div>
+          <section class="access-log w100">
+            <table id="access-log-table" class="table w100">
+              <thead>
+                <tr>
+                  <th>Entry Time</th>
+                  <th>Exit Time</th>
+                </tr>
+              </thead>
+              <tbody></tbody>
+            </table>
+          </section>
         </div>
-				<section class="access-log">
-      <h3>Accesses</h3>
-      <table id="access-log-table" class="table">
-        <thead>
-          <tr>
-            <th>Entry Time</th>
-            <th>Exit Time</th>
-          </tr>
-        </thead>
-        <tbody>
-
-				</tbody>
-      </table>
-    </section>
-				</div>
-				<img id="profile-photo" class="l profile-info__photo" src="/assets/photo-placeholder.jpg" alt="Profile Photo">
       </div>
     </section>
-    <section class="cards">
-      <h2>Add Guests</h2>
-      <form id="guest-form" class="form">
-        <div class="form__group">
-          <label for="guest-name">Guest Name</label>
-          <input type="text" id="guest-name" name="guest-name" placeholder="Enter guest name">
-        </div>
-        <div class="form__group">
-          <label for="from-address">From Address</label>
-          <input type="text" id="from-address" name="from-address" placeholder="Enter visitor's address">
-        </div>
-        <div class="form__group">
-          <label for="expected-stay">Expected Stay</label>
-          <select id="expected-stay" name="expected-stay">
-            <option value="3 hours">3 hours</option>
-            <option value="6 hours">6 hours</option>
-            <option value="12 hours">12 hours</option>
-            <option value="1 day">1 day</option>
-            <option value="2 days">2 days</option>
-          </select>
-        </div>
-        <div class="form__group">
-          <label for="vehicle-number">Vehicle Number</label>
-          <input type="text" id="vehicle-number" name="vehicle-number" placeholder="Enter vehicle number">
-        </div>
-        <button type="submit" id="guest-submit-btn" class="btn">Confirm Entry</button>
-      </form>
-    </section>
 
+    <!-- Visitors Section -->
+    <section class="card" id="visitors-section">
+      <h2>Add Visitors</h2>
+      <div id="visitors-list"></div>
+      <button type="button" id="add-visitor-btn" class="btn">
+        <span data-lucide="user-plus"></span> Add Visitor
+      </button>
+
+      <div class="form__group">
+        <label for="vehicle-number">Vehicle Number</label>
+        <input
+          type="text"
+          id="vehicle-number"
+          name="vehicle-number"
+          placeholder="Enter vehicle number"
+        />
+      </div>
+
+      <!-- Confirm and Cancel -->
+      <button type="button" id="confirm-visitors-btn" class="btn">Confirm Entry</button>
+      <button type="button" id="cancel-visitors-btn" class="btn hidden mt-sm">Cancel</button>
+
+      <!-- OTP field hidden initially -->
+      <div class="form__group hidden" id="otp-group">
+        <label for="otp-input">OTP</label>
+        <div class="flex"><input type="text" id="otp-input" placeholder="Enter OTP" />
+        <button type="button" id="validate-otp-btn" class="btn">Validate OTP</button></div>
+      </div>
+    </section>
   </main>
 
-  <!-- Notification / Alert Section -->
-  <div id="notification" class="notification"></div>
+  <div id="notification" class="notification flex"></div>
 
-  <script src="scripts/utils.js"></script>
-  <script src="scripts/search.js"></script>
-  <script src="scripts/access.js"></script>
-  <script src="scripts/guests.js"></script>
-  <script src="scripts/main.js"></script>
+		<script>
+			document.addEventListener("DOMContentLoaded", () => {
+				if (window.lucide) {
+					window.lucide.createIcons();
+				}
+			});
+		</script>
 </body>
 </html>
